# soundcork

./: README.md  docker-compose.yml  nginx-ETag.conf  pyproject.toml  requirements.txt  run_nginx.sh
.github/workflows/: docker-publish.yml  lint.yml  tests.yml
docs/: deployment.md  spotify.md
soundcork/: admin.py  bmx.py  config.py  constants.py  datastore.py  devices.py  groups.py  groups_service.py  main.py  management.py  marge.py  mgmt.py  miniapp.py  model.py  spotify_service.py  unhandled.py  unhandled_exception_handler.py  utils.py  zeroconf_primer.py
soundcork/resources/: OverrideSdkPrivateCfg.xml.template
soundcork/static/css/: admin.css  main.css  miniapp.css
soundcork/templates/: dashboard.html  index.html  login.html  miniapp.html
soundcork/templates/admin/: index.html  wait.html
soundcork/tests/: test_bmx.py  test_datastore.py  test_stockholm_compat.py
soundcork/ui/: speakers.py
