[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soundcork"
version = "0.0.2"

description = "A replacement server for Bose SoundTouch devices."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]

authors = [{ name = "Deborah Kaplan" }, { name = "Allen Petersen" }]
maintainers = [{ name = "Deborah Kaplan" }, { name = "Allen Petersen" }]

requires-python = ">=3.12"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages]
find = {}

[tool.black]

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["soundcork"]
combine_as_imports = true
include_trailing_comma = true

[tool.mypy]
plugins = ["pydantic.mypy"]


[tool.pydantic-mypy]